--- a/practice/Base.lproj/Main.storyboard
+++ b/practice/Base.lproj/Main.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -25,25 +24,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dmk-DT-UVd">
-                                <rect key="frame" x="48" y="363" width="225" height="50"/>
+                                <rect key="frame" x="48" y="466" width="225" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="MMR-Hq-ioj"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                 <color key="tintColor" red="0.29803921568627451" green="0.68235294117647061" blue="0.68627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Show another fun fact"/>
                                 <connections>
                                     <action selector="showFunFact" destination="BYZ-38-t0r" eventType="touchUpInside" id="gnT-KP-1Tv"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you know?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vt-J6-5S7">
-                                <rect key="frame" x="48" y="60" width="116" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Did you know?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vt-J6-5S7">
+                                <rect key="frame" x="48" y="60" width="138" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="DoZ-km-Evw"/>
-                                    <constraint firstAttribute="width" constant="116" id="MIN-tI-Ant"/>
+                                    <constraint firstAttribute="width" constant="138" id="MIN-tI-Ant"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -53,9 +52,9 @@
                             <constraint firstAttribute="trailingMargin" secondItem="4GI-Hh-cQ1" secondAttribute="trailing" constant="27" id="3sd-Z9-n51"/>
                             <constraint firstAttribute="trailing" secondItem="dmk-DT-UVd" secondAttribute="trailing" constant="47" id="QLh-xg-ijP"/>
                             <constraint firstItem="4GI-Hh-cQ1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="28" id="Rsi-HF-esC"/>
-                            <constraint firstItem="6vt-J6-5S7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="Tk4-nH-W1U"/>
+                            <constraint firstItem="6vt-J6-5S7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="28" id="Tk4-nH-W1U"/>
                             <constraint firstItem="dmk-DT-UVd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="48" id="UW9-Et-5Nx"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dmk-DT-UVd" secondAttribute="bottom" constant="155" id="Wcc-Np-b35"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dmk-DT-UVd" secondAttribute="bottom" constant="52" id="Wcc-Np-b35"/>
                             <constraint firstItem="4GI-Hh-cQ1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rJZ-eq-hZq"/>
                             <constraint firstItem="6vt-J6-5S7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="vFf-D6-NNA"/>
                         </constraints>
