--- a/practice/Base.lproj/Main.storyboard
+++ b/practice/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cat" translatesAutoresizingMaskIntoConstraints="NO" id="dDf-R4-mVl">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cat" translatesAutoresizingMaskIntoConstraints="NO" id="dDf-R4-mVl" customClass="CatImage">
                                 <rect key="frame" x="85" y="237" width="150" height="94"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An Interesting fact goes here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4GI-Hh-cQ1">
@@ -63,7 +63,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cat" destination="dDf-R4-mVl" id="vaY-Pj-PTa"/>
+                        <outlet property="cat" destination="dDf-R4-mVl" id="roB-mn-4UL"/>
                         <outlet property="funFactButton" destination="dmk-DT-UVd" id="fG5-k9-DtD"/>
                         <outlet property="funFactLabel" destination="4GI-Hh-cQ1" id="eGH-Ax-aif"/>
                     </connections>
