--- a/practice/Base.lproj/LaunchScreen.storyboard
+++ b/practice/Base.lproj/LaunchScreen.storyboard
@@ -16,18 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you know?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGj-aR-iQG">
-                                <rect key="frame" x="220" y="285" width="161" height="30"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="runner" translatesAutoresizingMaskIntoConstraints="NO" id="HGy-MT-FNr">
+                                <rect key="frame" x="250" y="233" width="100" height="134"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="150" y="209" width="100" height="134"/>
+                                </variation>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.91730736065745289" blue="0.043463427469821347" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="KGj-aR-iQG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="SwR-SV-XVg"/>
-                            <constraint firstItem="KGj-aR-iQG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xut-cT-q7k"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.0078431372549019607" green="0.6588235294117647" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,4 +31,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="runner" width="279" height="372"/>
+    </resources>
 </document>
